syntax = "proto3";

option csharp_namespace = "grpcArachne";

service T1Barang{
	rpc GetDataBarang(ListBarangRequest) returns (ListBarang);
	rpc GetBarangId(ListBarangIdRequest) returns (Barang);
	rpc GetDataBarangWithStream(ListBarangRequest) returns (stream Barang);
}

message ListBarangRequest{
	int64 IdSupplier = 1;
}

message ListBarangIdRequest{
	int64 IdBarang = 1;
}

message ListBarang{
	repeated Barang Barang = 1;
}

message Barang {
	int64 IdBarang = 1;
	int64 IdDivisiBarang = 7;
	int64 IdSubDivisiBarang = 8;
	int64 IdKategoriBarang = 9;
	int64 IdSubKategoriBarang = 10;
	int64 IdSupplier = 3;
	int64 IdJenisSupplier =4;
	int64 IdSatuan = 5;
	string Nama = 2;
	string Satuan = 6;
	int32 Stok = 11;
	int64 Minimum = 12;
	int64 Maksimum = 13;
}