syntax = "proto3";

option csharp_namespace = "grpcArachne";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service FormAtribut{
	rpc GetDivisiBarang(Empty) returns (stream T0DivisiBarang);
	rpc GetSubDivisiBarang(Empty) returns (stream T1SubDivisiBarang);
	rpc GetKategoriBarang(Empty) returns (stream T0KategoriBarang);
	rpc GetSubKategoriBarang(Empty) returns (stream T1SubKategoriBarang);
}

message Empty{

}

message T0DivisiBarang{
	int64 IdDivisi = 1;
	google.protobuf.StringValue Divisi = 2;
}

message T1SubDivisiBarang{
	int64 IdSubDivisi = 1;
	google.protobuf.StringValue SubDivisi = 2;
	google.protobuf.StringValue Keterangan = 3;
}

message T0KategoriBarang{
	int64 IdKategoriBarang = 1;
	google.protobuf.StringValue KategoriBarang = 2;
}

message T1SubKategoriBarang{
	int64 IdSubKategoriBarang = 1;
	google.protobuf.StringValue SubKategoriBarang = 2;
}